--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,7 +33,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: x86_64
-          args: --release --out dist --sdist
+          args: --release --out dist
           maturin-version: "v0.13.0"
       - name: Install built wheel - x86_64
         run: |
@@ -120,6 +120,8 @@ jobs:
         target: [aarch64, armv7, s390x, ppc64le, ppc64]
     steps:
       - uses: actions/checkout@v3
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v1
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
@@ -261,6 +263,8 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     needs:
       - macos
       - windows
@@ -274,3 +278,5 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: wheels
+     - name: Publish package distributions to PyPI
+       uses: pypa/gh-action-pypi-publish@release/v1
