--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -130,8 +130,11 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: auto
-          args: --release -i python3.7 --out dist
+          args: --release -i python3 --out dist
           maturin-version: "v0.13.0"
+          before-script-linux: |
+            echo $(which python3)
+            python3 --version
       - uses: uraimo/run-on-arch-action@v2.0.5
         if: matrix.target != 'ppc64'
         name: Install built wheel
@@ -206,8 +209,12 @@ jobs:
         with:
           target: ${{ matrix.platform.target }}
           manylinux: musllinux_1_2
-          args: --release -i python3.7 --out dist
+          args: --release -i python3 --out dist
           maturin-version: "v0.13.0"
+          before-script-linux: |
+            echo $(which python3)
+            python3 --version
+      - uses: uraimo/run-on-arch-action@v2.0.5
       - uses: uraimo/run-on-arch-action@master
         name: Install built wheel
         with:
@@ -273,7 +280,7 @@ jobs:
       - musllinux
       - musllinux-cross
       - pypy
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/download-artifact@v2
         with:
