--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -130,11 +130,11 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: auto
-          args: --release -i python3 --out dist
+          args: --release -i python3.7 --out dist
           maturin-version: "v0.13.0"
           before-script-linux: |
-            echo $(which python3)
-            python3 --version
+            echo $(which python3.7)
+            python3.7 --version
       - uses: uraimo/run-on-arch-action@v2.0.5
         if: matrix.target != 'ppc64'
         name: Install built wheel
@@ -172,8 +172,11 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: musllinux_1_2
-          args: --release --out dist
+          args: --release -i python3.7 --out dist
           maturin-version: "v0.13.0"
+          before-script-linux: |
+            echo $(which python3.7)
+            python3.7 --version
       - name: Install built wheel
         if: matrix.target == 'x86_64-unknown-linux-musl'
         uses: addnab/docker-run-action@v3
@@ -209,11 +212,11 @@ jobs:
         with:
           target: ${{ matrix.platform.target }}
           manylinux: musllinux_1_2
-          args: --release -i python3 --out dist
+          args: --release -i python3.7 --out dist
           maturin-version: "v0.13.0"
           before-script-linux: |
-            echo $(which python3)
-            python3 --version
+            echo $(which python3.7)
+            python3.7 --version
       - uses: uraimo/run-on-arch-action@v2.0.5
       - uses: uraimo/run-on-arch-action@master
         name: Install built wheel
