--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -193,5 +193,6 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: wheels
+          path: dist
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
