--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   macos:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -146,14 +146,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-13]
         target: [x86_64, aarch64]
         python-version:
           - '3.7'
           - '3.8'
           - '3.9'
         exclude:
-          - os: macos-latest
+          - os: macos-13
             target: aarch64
     steps:
       - uses: actions/checkout@v4
