--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,10 +49,11 @@ jobs:
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*universal2.whl --force-reinstall
       - name: Upload wheels
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: dist
+          overwrite: true
 
   windows:
     runs-on: windows-latest
@@ -82,10 +83,11 @@ jobs:
         run: |
           python -m pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
       - name: Upload wheels
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: dist
+          overwrite: true
 
   linux:
     runs-on: ubuntu-latest
@@ -110,10 +112,11 @@ jobs:
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
       - name: Upload wheels
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: dist
+          overwrite: true
 
   linux-cross:
     runs-on: ubuntu-latest
@@ -138,10 +141,11 @@ jobs:
             echo $(which python3.8)
             python3.8 --version
       - name: Upload wheels
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: dist
+          overwrite: true
   pypy:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -170,10 +174,11 @@ jobs:
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
       - name: Upload wheels
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: dist
+          overwrite: true
 
   sdist:
     runs-on: ubuntu-latest
@@ -185,10 +190,11 @@ jobs:
           command: sdist
           args: --out dist
       - name: Upload sdist
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: dist
+          overwrite: true
 
   release:
     name: Release
@@ -204,7 +210,7 @@ jobs:
       - sdist
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4
         with:
           name: wheels
           path: dist
