--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -105,8 +105,11 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: auto
-          args: --release --out dist
+          args: --release -i python3.9 --out dist
           maturin-version: "v0.13.0"
+          before-script-linux: |
+            echo $(which python3.9)
+            python3.9 --version
       - name: Install built wheel
         if: matrix.target == 'x86_64'
         run: |
@@ -135,11 +138,11 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: auto
-          args: --release -i python3.8 --out dist
+          args: --release -i python3.9 --out dist
           maturin-version: "v0.13.0"
           before-script-linux: |
-            echo $(which python3.8)
-            python3.8 --version
+            echo $(which python3.9)
+            python3.9 --version
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -153,7 +156,7 @@ jobs:
         os: [ubuntu-latest, macos-13]
         target: [x86_64, aarch64]
         python-version:
-          - '3.8'
+          - '3.9'
         exclude:
           - os: macos-13
             target: aarch64
