sdist does need an interpreter specified

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -186,7 +186,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: sdist
-          args: --out dist -i python${{ env.PYTHON_VERSION }}
+          args: --out dist
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
