Migrate to Python 3.10 as minimum supported version
- Update requires-python from >=3.8 to >=3.10 in pyproject.toml
- Add Python version classifiers for 3.10, 3.11, 3.12, and 3.13
- Update CI/CD workflows to use Python 3.10 for building wheels
- Update all python3.9 references to python3.10 in workflow scripts

Co-authored-by: Ona <no-reply@ona.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "rs-chardet"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 repository = "https://github.com/emattiza/rs_chardet"
 authors = [
 	{ name = "Evan Mattiza" }
@@ -20,6 +20,11 @@ classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 
 [project.urls]
