--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,26 +18,26 @@ env:
 
 jobs:
   macos:
-    runs-on: macos-13
+    runs-on: macos-15
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          architecture: x64
+          architecture: arm64
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           profile: minimal
           default: true
-      - name: Build wheels - x86_64
+      - name: Build wheels - aarch64
         uses: PyO3/maturin-action@v1
         with:
-          target: x86_64
+          target: aarch64
           args: --release --out dist -i python${{ env.PYTHON_VERSION }}
           maturin-version: "v0.13.0"
-      - name: Install built wheel - x86_64
+      - name: Install built wheel - aarch64
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
       - name: Build wheels - universal2
@@ -97,7 +97,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          architecture: x64
+          architecture: arm64
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -109,7 +109,7 @@ jobs:
             echo $(which python3.9)
             python3.9 --version
       - name: Install built wheel
-        if: matrix.target == 'x86_64'
+        if: (matrix.os == 'ubuntu-latest' && matrix.target == 'x86_64') || (matrix.os == 'macos-15' && matrix.target == 'aarch64')
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
       - name: Upload wheels
@@ -149,13 +149,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13]
+        os: [ubuntu-latest, macos-15]
         target: [x86_64, aarch64]
         python-version:
           - "3.9"
         exclude:
-          - os: macos-13
-            target: aarch64
+          - os: macos-15
+            target: x86_64
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-python@v5
@@ -169,7 +169,7 @@ jobs:
           manylinux: auto
           args: --release --out dist -i pypy${{ matrix.python-version }}
       - name: Install built wheel
-        if: matrix.target == 'x86_64'
+        if: (matrix.os == 'ubuntu-latest' && matrix.target == 'x86_64') || (matrix.os == 'macos-15' && matrix.target == 'aarch64')
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
       - name: Upload wheels
