add architecture to python setup on linux
Co-authored-by: Ona <no-reply@ona.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,13 +91,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64, i686]
+        target: [x86_64, i686, aarch64]
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          architecture: arm64
+          architecture: ${{ matrix.target }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
