just x86 for linux native build

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,7 +91,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x64, arm64]
+        target: [x64]
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-python@v5
