--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -58,7 +58,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        target: [x64, x86]
+        target: [x64]
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-python@v6
@@ -144,38 +144,6 @@ jobs:
         uses: actions/upload-artifact@v5
         with:
           name: rschardet-linux-cross-${{ matrix.target }}
-          path: dist
-  pypy:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-15]
-        target: [x86_64, aarch64]
-        python-version:
-          - "3.10"
-        exclude:
-          - os: macos-15
-            target: x86_64
-    steps:
-      - uses: actions/checkout@v5
-      - uses: actions/setup-python@v6
-        with:
-          python-version: pypy${{ matrix.python-version }}
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          maturin-version: "v0.13.0"
-          target: ${{ matrix.target }}
-          manylinux: auto
-          args: --release --out dist -i python${{ matrix.python-version }}
-      - name: Install built wheel
-        if: (matrix.os == 'ubuntu-latest' && matrix.target == 'x86_64') || (matrix.os == 'macos-15' && matrix.target == 'aarch64')
-        run: |
-          pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
-      - name: Upload wheels
-        uses: actions/upload-artifact@v5
-        with:
-          name: rschardet-pypi-${{ matrix.os }}-${{ matrix.target }}
           path: dist
 
   sdist:
